<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/relativelayoutmain2activity"
    tools:context="com.example.backinblack.espressohovedopgave.Main2Activity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Email"
        android:layout_marginTop="56dp"
        android:hint="Email"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:onClick="Login"
        android:id="@+id/signin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp"
        android:layout_below="@+id/Email"
        android:backgroundTint="#333333"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:onClick="Signup"
        android:id="@+id/buttonsignup"
        android:layout_alignTop="@+id/signin"
        android:layout_toEndOf="@+id/signin"
        android:textColor="#FFFFFF"
        android:backgroundTint="#333333" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="reset Password"
        android:id="@+id/buttonrestpassword"
        android:onClick="Forgotpassword"
        android:layout_below="@+id/Password" android:layout_toEndOf="@+id/buttonsignup"
        android:layout_alignEnd="@+id/Password"
        android:backgroundTint="#333333"
        android:textColor="#FFFFFF" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:layout_above="@+id/buttonsignup"
        android:layout_alignParentStart="true"
        android:hint="Password"
        android:layout_alignEnd="@+id/Email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/imagestherubzlogo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/Email" />

</RelativeLayout>
