...
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:id="@+id/crystalcardview"
        android:onClick="tocrystal"
        android:layout_below="@+id/classiccardview">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
...
