...
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.backinblack.espressohovedopgave.ResetPasswordActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailglemtpassword"
        android:text="Email"
        android:layout_above="@+id/Sendemialbutton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
